--- a/flex/templates/flex/flex_page.html
+++ b/flex/templates/flex/flex_page.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
-
 {% load wagtailcore_tags %}
 
 {% block content %}
-    {{ self.subtitle }} is the subtitle
+    <h1>
+        {{ self.subtitle }}
+    </h1>
+    {% for block in page.body %}
+        {% include_block block %}
+    {% endfor %}
 {% endblock %}
