added Orderable image carousel

--- a/streamfields/templates/card_block.html
+++ b/streamfields/templates/card_block.html
@@ -1,7 +1,7 @@
 {% load wagtailimages_tags%}
-
 <h1 class="text-center">{{ self.title }}</h1>
-<div class="card-group">
+<div class="d-flex justify-content-center">
+    <div class="card-group mx-auto">
         {% for card in self.cards %}
             {% image card.image fill-300x200 as img%}
             <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
@@ -19,3 +19,4 @@
             </div>
         {% endfor %}
     </div>
+</div>
