--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -1,11 +1,52 @@
 {% extends "base.html" %}
 
-{% load wagtailcore_tags %}
+{% load wagtailcore_tags wagtailimages_tags %}
 
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
     {% load wagtailcore_tags %}
 
+    
+    
+    
+    
+    
+    
+    
+    
     {{ page.body|richtext }}
+
+    <div id="carouselExampleControls" class="carousel slide carousel-fade" data-ride="carousel">
+        <div class="carousel-inner">
+            {% for loop_cycle in self.carousel_images.all %}
+                {% image loop_cycle.carousel_image fill-900x400 as img %}
+                <div class="carousel-item{% if forloop.counter == 1 %} active{% endif %}">
+                    <img src="{{ img.url }}" class="d-block w-100" alt="{{ img.alt }}">
+                </div>
+            {% endfor %}
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+
+
+    {% for block in page.content %}
+        {% include_block block %}
+
+
+
+
+
+
+
+
+
+    {% endfor %}
 {% endblock %}
