--- a/kateneblog/templates/base.html
+++ b/kateneblog/templates/base.html
@@ -27,9 +27,12 @@
         {% endif %}
 
         {# Global stylesheets #}
+        <link rel="stylesheet" href="https://kit.fontawesome.com/68fad2eb73.css" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="{% static 'css/kateneblog.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
         
+        <script src="https://kit.fontawesome.com/68fad2eb73.js" crossorigin="anonymous"></script>
+
         {# favicon #}
         <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/apple-touch-icon.png' %}">
         <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon-32x32.png' %}">
@@ -42,38 +45,68 @@
     </head>
 
     <body class="{% block body_class %}{% endblock %}">
-        {% wagtailuserbar %}
-            <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-                <div class="container-fluid">
-                <a class="navbar-brand" href="/">Katene</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarColor01">
-                    <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/">Home
-                        <span class="visually-hidden">(current)</span>
-                        </a>
-                    </li>
-
-                    {% for item in navigation.menu_items.all %}
-                    <li class="nav-item">
-                            <a class="nav-link" href={{item.link}} {% if item.open_in_new_tab %} target="_blank"{% endif %}>{{item.title}}</a>
-                        </li>
-                    {% endfor %}
-
-                    </ul>
-                    <form class="d-flex">
-                    <input class="form-control me-sm-2" type="search" placeholder="Search">
-                    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                    </form>
-                </div>
-                </div>
-            </nav>
         <div class="container-fluid">
-            {% block content %}{% endblock %}
+
+            {% wagtailuserbar %}
+                <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+                    <div class="container-fluid">
+                    <a class="navbar-brand" href="/">Katene</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarColor01">
+                        <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/">Home
+                            <span class="visually-hidden">(current)</span>
+                            </a>
+                        </li>
+
+                        {% for item in navigation.menu_items.all %}
+                        <li class="nav-item">
+                                <a class="nav-link" href={{item.link}} {% if item.open_in_new_tab %} target="_blank"{% endif %}>{{item.title}}</a>
+                            </li>
+                        {% endfor %}
+
+                        </ul>
+                        <form class="d-flex">
+                        <input class="form-control me-sm-2" type="search" placeholder="Search">
+                        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+                        </form>
+                    </div>
+                    </div>
+                </nav>
+            
+            
+                {% block content %}{% endblock %}
+
+            Site settings:
+            {% if settings.site_settings.SocialMediaSettings.facebook %}
+                <a href="{{ settings.site_settings.SocialMediaSettings.facebook }}">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+            {% endif %}
+            {% if settings.site_settings.SocialMediaSettings.instagram %}
+                <a href="{{ settings.site_settings.SocialMediaSettings.instagram }}">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            {% endif %}
+            {% if settings.site_settings.SocialMediaSettings.linkedin %}
+                <a href="{{ settings.site_settings.SocialMediaSettings.linkedin }}">
+                    <i class="fa-brands fa-linkedin"></i>
+                </a>
+            {% endif %}
+            {% if settings.site_settings.SocialMediaSettings.github %}
+                <a href="{{ settings.site_settings.SocialMediaSettings.github }}">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+            {% endif %}
         </div>
+
+
+
+
+
         {# Global javascript #}
         {% comment %} <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
