added subscribers to wagtail admin

--- a/kateneblog/templates/base.html
+++ b/kateneblog/templates/base.html
@@ -82,22 +82,22 @@
 
             Site settings:
             {% if settings.site_settings.SocialMediaSettings.facebook %}
-                <a href="{{ settings.site_settings.SocialMediaSettings.facebook }}">
+                <a href="{{ settings.site_settings.SocialMediaSettings.facebook }}" target="_blank">
                     <i class="fa-brands fa-facebook"></i>
                 </a>
             {% endif %}
             {% if settings.site_settings.SocialMediaSettings.instagram %}
-                <a href="{{ settings.site_settings.SocialMediaSettings.instagram }}">
+                <a href="{{ settings.site_settings.SocialMediaSettings.instagram }}" target="_blank">
                     <i class="fa-brands fa-instagram"></i>
                 </a>
             {% endif %}
             {% if settings.site_settings.SocialMediaSettings.linkedin %}
-                <a href="{{ settings.site_settings.SocialMediaSettings.linkedin }}">
+                <a href="{{ settings.site_settings.SocialMediaSettings.linkedin }}" target="_blank">
                     <i class="fa-brands fa-linkedin"></i>
                 </a>
             {% endif %}
             {% if settings.site_settings.SocialMediaSettings.github %}
-                <a href="{{ settings.site_settings.SocialMediaSettings.github }}">
+                <a href="{{ settings.site_settings.SocialMediaSettings.github }}" target="_blank">
                     <i class="fa-brands fa-github"></i>
                 </a>
             {% endif %}
