--- a/blog/templates/blog/blog_tag_index_page.html
+++ b/blog/templates/blog/blog_tag_index_page.html
@@ -4,7 +4,7 @@
 {% block content %}
 
     {% if request.GET.tag %}
-        <h4>Showing pages tagged "{{ request.GET.tag }}"</h4>
+        <h4>Showing blogs tagged "{{ request.GET.tag }}"</h4>
     {% endif %}
 
     {% for blogpage in blogpages %}
