--- a/kateneblog/templates/base.html
+++ b/kateneblog/templates/base.html
@@ -33,6 +33,11 @@
         
         <script src="https://kit.fontawesome.com/68fad2eb73.js" crossorigin="anonymous"></script>
 
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+
         {# favicon #}
         <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/apple-touch-icon.png' %}">
         <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon-32x32.png' %}">
@@ -45,75 +50,91 @@
     </head>
 
     <body class="{% block body_class %}{% endblock %}">
-        <div class="container-fluid">
-
-            {% wagtailuserbar %}
-                <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-                    <div class="container-fluid">
-                    <a class="navbar-brand" href="/">Katene</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarColor01">
-                        <ul class="navbar-nav me-auto">
+        
+        {% wagtailuserbar %}
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">Katene</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarColor01">
+                    <ul class="navbar-nav me-auto">
                         <li class="nav-item">
                             <a class="nav-link active" href="/">Home
-                            <span class="visually-hidden">(current)</span>
+                                <span class="visually-hidden">(current)</span>
                             </a>
                         </li>
-
+                        
                         {% for item in navigation.menu_items.all %}
                         <li class="nav-item">
-                                <a class="nav-link" href={{item.link}} {% if item.open_in_new_tab %} target="_blank"{% endif %}>{{item.title}}</a>
-                            </li>
+                            <a class="nav-link" href={{item.link}} {% if item.open_in_new_tab %} target="_blank"{% endif %}>{{item.title}}</a>
+                        </li>
                         {% endfor %}
-
-                        </ul>
-                        <form class="d-flex">
+                        
+                    </ul>
+                    <form class="d-flex">
                         <input class="form-control me-sm-2" type="search" placeholder="Search">
                         <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-                        </form>
-                    </div>
-                    </div>
-                </nav>
-            
-            
-                {% block content %}{% endblock %}
+                    </form>
+                </div>
+            </div>
+        </nav>
 
-            Site settings:
-            {% if settings.site_settings.SocialMediaSettings.facebook %}
-                <a href="{{ settings.site_settings.SocialMediaSettings.facebook }}" target="_blank">
-                    <i class="fa-brands fa-facebook"></i>
-                </a>
-            {% endif %}
-            {% if settings.site_settings.SocialMediaSettings.instagram %}
-                <a href="{{ settings.site_settings.SocialMediaSettings.instagram }}" target="_blank">
-                    <i class="fa-brands fa-instagram"></i>
-                </a>
-            {% endif %}
-            {% if settings.site_settings.SocialMediaSettings.linkedin %}
-                <a href="{{ settings.site_settings.SocialMediaSettings.linkedin }}" target="_blank">
-                    <i class="fa-brands fa-linkedin"></i>
-                </a>
-            {% endif %}
-            {% if settings.site_settings.SocialMediaSettings.github %}
-                <a href="{{ settings.site_settings.SocialMediaSettings.github }}" target="_blank">
-                    <i class="fa-brands fa-github"></i>
-                </a>
-            {% endif %}
+
+        <div class="container-fluid">
+                {% block content %}{% endblock %}
         </div>
+
+
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 px-3 my-4 border-top">
+            <div class="col-md-4 d-flex align-items-center ">
+            <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+                <img src="{% static 'images/favicon-32x32.png' %}" alt="letter K">
+            </a>
+            <span class="mb-3 mb-md-0 text-muted">&copy; 2023 Katene's Blog</span>
+            </div>
+
+
+            <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <li class="ms-3">
+                {% if settings.site_settings.SocialMediaSettings.facebook %}
+                    <a href="{{ settings.site_settings.SocialMediaSettings.facebook }}" target="_blank">
+                        <i class="fa-2x fa-brands fa-facebook"></i>
+                    </a>
+                {% endif %}
+            </li>
+            <li class="ms-3">
+                {% if settings.site_settings.SocialMediaSettings.instagram %}
+                    <a href="{{ settings.site_settings.SocialMediaSettings.instagram }}" target="_blank">
+                        <i class="fa-2x fa-brands fa-instagram"></i>
+                    </a>
+                {% endif %}
+            </li>
+            <li class="ms-3">
+                {% if settings.site_settings.SocialMediaSettings.linkedin %}
+                <a href="{{ settings.site_settings.SocialMediaSettings.linkedin }}" target="_blank">
+                    <i class="fa-2x fa-brands fa-linkedin"></i>
+                </a>
+                {% endif %}
+            </li>
+            <li class="ms-3">
+                {% if settings.site_settings.SocialMediaSettings.github %}
+                <a href="{{ settings.site_settings.SocialMediaSettings.github }}" target="_blank">
+                    <i class="fa-2x fa-brands fa-github"></i>
+                </a>
+                {% endif %}
+            </li>
+            </ul>
+
+        </footer>
 
 
 
 
 
         {# Global javascript #}
-        {% comment %} <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script> {% endcomment %}
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
         <script type="text/javascript" src="{% static 'js/kateneblog.js' %}"></script>
 
 
