--- a/blog/templates/blog/latest_posts.html
+++ b/blog/templates/blog/latest_posts.html
@@ -1,17 +1,13 @@
 {% extends "base.html" %}
 
-{% load wagtailcore_tags wagtailimages_tags wagtailroutablepage_tags%}
+{% load wagtailcore_tags wagtailimages_tags %}
 
 {% block body_class %}template-blogindexpage{% endblock %}
 
 {% block content %}
-    <a href="{% routablepageurl page "latest_posts" %}">View Latest Posts Only</a>
 
-    <h1>{{ page.title }}</h1>
-
-    <div class="intro">{{ page.intro|richtext }}</div>
-
-    {% for post in blogpages %}
+    <h1>Lastest Posts {{regular_context_var}}</h1>
+    {% for post in posts %}
         {% with post=post.specific %}
 
         <h2><a href="{% pageurl post %}">{{ post.title }}</a></h2>
