--- a/streamfields/templates/card_block.html
+++ b/streamfields/templates/card_block.html
@@ -10,9 +10,9 @@
                     <h2 class="card-title">{{ card.title }}</h2>
                     <p class="card-text">{{ card.text }}</p>
                     {% if card.button_page %}
-                        <a href="{{card.button_page.url}}" class="btn btn-secondary">Learn More</a>
+                        <a href="{{card.button_page.url}}" class="btn btn-light">Learn More</a>
                     {% elif card.button_url %}
-                        <a href="{{card.button_url}}" class="btn btn-secondary">Learn More</a>
+                        <a href="{{card.button_url}}" class="btn btn-light">Learn More</a>
                     {% endif %}
 
                 </div>
