--- a/streamfields/templates/cta_block.html
+++ b/streamfields/templates/cta_block.html
@@ -1,15 +1,17 @@
 {% load wagtailcore_tags %}
 
-    <div class="row">
+    <div class="row my-2">
         <div class="col-lg-6">
-            <h1>{{ self.title }}</h1>
-            {{ self.text|richtext }}
-
-            {% if self.button_page %}
-                <a href="{{self.button_page.url}}">{{self.button_text}}</a>
-            {% elif self.button_url %}
-                <a href="{{self.button_url}}">{{self.button_text}}</a>
-
-            {% endif %}
+            <div class="card card text-white bg-primary mb-3" >
+                <div class="card-header">{{ self.title }}</div>
+                <div class="card-body">
+                    <h3 class="card-title">{{ self.subtitle }}</h4>
+                    <p class="card-text">{{ self.text|richtext }}</p>
+                    {% if self.url %}
+                        <a href="{{self.url}}"><button class="btn btn-light" type="button">{{self.button_text}}</button></a>
+                    {% endif %}
+                </div>
+            </div>
         </div>
+        
     </div>
