--- a/streamfields/templates/card_block.html
+++ b/streamfields/templates/card_block.html
@@ -9,11 +9,7 @@
                 <div class="card-body">
                     <h2 class="card-title">{{ card.title }}</h2>
                     <p class="card-text">{{ card.text }}</p>
-                    {% if card.button_page %}
-                        <a href="{{card.button_page.url}}" class="btn btn-light">Learn More</a>
-                    {% elif card.button_url %}
-                        <a href="{{card.button_url}}" class="btn btn-light">Learn More</a>
-                    {% endif %}
+                        <a href="{{card.url}}" class="btn btn-light">Learn More</a>
 
                 </div>
             </div>
