--- a/blog/templates/video_blog_page.html
+++ b/blog/templates/video_blog_page.html
@@ -7,6 +7,7 @@
 {% block content %}
     
     <h1>{{ page.title }}</h1>
+    
 
 
     <p class="meta">{{ page.date }}</p>
@@ -51,6 +52,10 @@
     <div class="intro">
         <b>{{ page.intro }}</b>
     </div>
+
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/{{ self.youtube_video_id }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 
     {{ page.body|richtext }}
 
