--- a/blog/templates/blog/blog_index_page.html
+++ b/blog/templates/blog/blog_index_page.html
@@ -52,4 +52,46 @@
         {% endwith %}
     {% endfor %}
 
+    {% if blogpages.paginator.num_pages > 1 %}
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="pagination">
+
+                        {% if blogpages.has_previous %}
+                        <li class="page-item">
+                            <a href="?page={{ blogpages.previous_page_number }}" class="page-link">
+                                <span>&laquo;</span>
+                            </a>
+                        </li>
+                        {% endif %}
+
+                        {% for page_num in blogpages.paginator.page_range %}
+                        <li class="page-item {% if page_num == blogpages.number%} active{% endif %}">
+                            <a href="?page={{ page_num }}" class="page-link">
+                                <span>{{ page_num }}</span>
+                            </a>
+                        </li>
+                        {% endfor %}
+                        
+
+                        {% if blogpages.has_next %}
+                        <li class="page-item">
+                            <a href="?page={{ blogpages.next_page_number }}" class="page-link">
+                                <span>&raquo;</span>
+                            </a>
+                        </li>
+                        {% endif %}
+
+                    </div>
+
+                    
+                    
+                    
+                    
+                </div>
+            </div>
+        </div>
+    {% endif %}
+
 {% endblock %}
