add streamfield instead of richtext to blog pages, updated accordingly for article and video blog pages

--- a/blog/templates/blog/blog_page.html
+++ b/blog/templates/blog/blog_page.html
@@ -52,7 +52,9 @@
         <b>{{ page.intro }}</b>
     </div>
 
-    {{ page.body|richtext }}
+    {% for block in page.body %}
+        {% include_block block %}
+    {% endfor %}
 
     <div class="mx-auto" style="width:640px">
         <div id="carouselExampleControls" class="carousel slide carousel-fade" data-ride="carousel" >
