--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -8,14 +8,9 @@
     {% load wagtailcore_tags %}
 
     
-    
-    
-    
-    
-    
-    
-    
-    {{ page.body|richtext }}
+    {% for block in page.body %}
+        {% include_block block %}
+    {% endfor %}
 
     <div id="carouselExampleControls" class="carousel slide carousel-fade" data-ride="carousel">
         <div class="carousel-inner">
@@ -37,16 +32,8 @@
     </div>
 
 
-    {% for block in page.content %}
+    {% for block in page.cta %}
         {% include_block block %}
-
-
-
-
-
-
-
-
-
     {% endfor %}
+
 {% endblock %}
